@@ -9,6 +9,7 @@ improvement:
 - when appending to existing data files, it is checked if the currently loaded
   definition file is the same than used for the data file
 - on closing the program, ask the user when action is running if he really wants to
+- the last shown channels in the chart are stored for the next program start
 
 bugfixes:
 - when disconnecting from a SIX, empty the current temperature display
